--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
-/*  your css code here. If applicable */
+td,
+th {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 0.5rem;
+}
+
+th {
+    background-color: white; /* Background color for headers */
+    color: black; /* Text color for headers */
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #ffffff;
+}
+
+
